Fixed the gap in the case study cards

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -456,8 +456,9 @@ section {
         .case-study-detail {
             border: lightgrey solid 1px;
             border-top: 0;
+            margin-top: -5px;
             border-radius:  0 0 5px 5px;
-            padding: 15px 20px;
+            padding: 20px 20px;
             position: relative;
 
             .button {
